@@ -147,6 +147,11 @@ var Selection = {
 		var reg=new RegExp("\n<br>", "gi");
 		str = str.replace(reg,"\n");*/
 		
+
+		var reg=new RegExp("<div class=\"ma\" style=\"border-top: 2px solid rgb*</table></div>", "gi"); //Spécialité gmail (ne devrait pas faire de confilts)
+		str = str.replace(reg,"");
+
+
 		var reg=new RegExp("<br[^>]*>", "gi");
 		str = str.replace(reg,"\n");
 		var reg=new RegExp("<br>", "gi");
@@ -169,7 +174,7 @@ var Selection = {
 
 		var reg=new RegExp("<style>[^<]*</style>", "gi"); //Élimination des styles
 		str = str.replace(reg,"\n");
-		
+
 		reg=new RegExp("<[^>]+>", "g"); // Élimination des balises HTML
 		str = str.replace(reg, "");
 
